# Quantization

./: .gitignore  GPU_QUANTIZATION_TESTING.md  MISSING_UI_ANALYSIS.md  README.md  design.md  pyproject.toml  tasks.md
quantization/: __init__.py  benefits.py  calibrator.py  fp32_format.py  granularity.py  ptq.py  quantizer.py  schemes.py
quantization-app/: .dockerignore  .gcloudignore  .gitignore  DEPLOY.md  DEPLOYMENT_COMPLETE.md  Dockerfile  IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md  next.config.ts  package.json  start-backend.sh  start-frontend.sh  start.bat  start.sh  test-api.sh  tsconfig.json
quantization-app/backend/: .gcloudignore  Dockerfile  Dockerfile.cloudrun  main.py  pyproject.toml
quantization-app/backend/models/: schemas.py
quantization-app/backend/routers/: advanced.py  formats.py  quantization.py  real_model.py  weights.py
quantization-app/backend/services/: calibration.py  device.py  gptq_real.py  mixed_precision.py  model_export.py  quantizer.py  real_quantization.py  resnet_loader.py
quantization-app/deploy/: CLOUD_RUN_GUIDE.md  cloud-run-deploy.sh  cloud-run-no-gpu.sh  gcp-gpu-setup.ps1  gcp-gpu-setup.sh  gcp-manage.sh  start-server.py
quantization-app/docs/: 01-fundamentals.md  02-ptq.md  03-qat.md  04-granularity.md  05-nvidia.md  06-microsoft.md  07-google.md  08-llm-methods.md  09-hardware.md  10-evaluation.md  11-mixed-precision.md  12-industry-map.md  README.md
quantization-app/src/app/: globals.css  layout.tsx
quantization-app/src/components/dashboard/: Dashboard.tsx
quantization-app/src/components/visualizers/: AdvancedMethods.tsx  Benchmarks.tsx  DecisionGuide.tsx  ErrorAnalysis.tsx  HardwareGuide.tsx  InteractivePlayground.tsx  MemoryBenefits.tsx  QuantizationComparison.tsx  RealModelQuantization.tsx  StepByStepQuantization.tsx  ValueRepresentation.tsx  WeightDistribution.tsx
quantization-app/src/lib/: api.ts  utils.ts
quantization-app/src/store/: quantizationStore.ts
quantization/tests/: __init__.py  test_calibrator.py  test_fp32.py  test_granularity.py  test_ptq.py  test_quantizer.py  test_schemes.py
