[project]
name = "quantization"
version = "0.1.0"
description = "From-scratch AI model quantization implementation for deep learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.0",
    "torch==2.3.0",
    "streamlit==1.35.0",
    "plotly==5.22.0",
    "hypothesis==6.103.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantization*"]
exclude = ["images*", "*.tests*"]

[tool.pytest.ini_options]
testpaths = ["quantization/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=quantization",
    "--cov-report=term-missing",
]

[tool.hypothesis]
max_examples = 100
derandomize = true

[tool.coverage.run]
source = ["quantization"]
omit = ["quantization/tests/*", "quantization/ui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
